# hkquote

./: README.md  main.py  pyproject.toml  srv.py
lib/: chart.py  fetch.py  render.py  stocks.py
