[project]
name = "hkquote"
version = "0.1.0"
description = "HK stock market viewer for the terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "rich>=13.0.0",
    "flask>=3.0.0",
    "ansi2html>=1.9.0",
    "plotext>=5.2.0",
    "colorama>=0.4.6",
    "diagram>=0.2.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
